Netlify: build from /website, publish /website/dist; SPA redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -21,3 +21,13 @@
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+# netlify.toml  (at repo root)
+[build]
+  base    = "website"
+  publish = "dist"
+  command = "npm ci && npm run build"
+
+[[redirects]]
+  from = "/*"
+  to   = "/index.html"
+  status = 200
