--- a/netlify.toml
+++ b/netlify.toml
@@ -1,33 +1,12 @@
-# netlify.toml  — root of the repo
-
+# netlify.toml  (at the repository root)
 [build]
-  publish = "dist"
-  command = "npm run build"
+  base     = "website"
+  publish  = "website/dist"
+  command  = "npm run build"
+  functions = "website/netlify/functions"
 
-[functions]
-  directory = "netlify/functions"
-  node_bundler = "esbuild"
-
-# Route /api/* to your Netlify functions (adjust if you don't want this)
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-# (Optional) security headers
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-# netlify.toml  (at repo root)
-[build]
-  base    = "website"
-  publish = "dist"
-  command = "npm ci && npm run build"
-
+# Single-page app fallback
 [[redirects]]
   from = "/*"
-  to   = "/index.html"
+  to = "/index.html"
   status = 200
