--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,16 @@
-# netlify.toml  (at the repository root)
-[build]
-  base     = "website"
-  publish  = "website/dist"
-  command  = "npm run build"
-  functions = "website/netlify/functions"
+# netlify.toml  — single source of truth
 
-# Single-page app fallback
+[build]
+  base    = "website"
+  command = "npm run build"
+  publish = "dist"                # <-- NOT website/dist
+
+[functions]
+  directory    = "website/netlify/functions"
+  node_bundler = "esbuild"
+
+# History API / SPA fallback
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to   = "/index.html"
   status = 200
