--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,11 @@
-# netlify.toml  — single source of truth
-
 [build]
-  base    = "website"
-  command = "npm run build"
-  publish = "dist"                # <-- NOT website/dist
+base    = "website"
+publish = "website/dist"
+command = "npm run build"
 
 [functions]
-  directory    = "website/netlify/functions"
-  node_bundler = "esbuild"
+node_bundler = "esbuild"
+included_files = ["website/public/*.json"]
 
-# History API / SPA fallback
-[[redirects]]
-  from = "/*"
-  to   = "/index.html"
-  status = 200
+[build.environment]
+NODE_VERSION = "18.20.3"
