--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,8 @@
 [build]
-base    = "website"
-publish = "website/dist"
-command = "npm run build"
+  base    = "website"
+  command = "npm run build"
+  publish = "dist"            # <-- IMPORTANT: not "website/dist"
 
 [functions]
-node_bundler = "esbuild"
-included_files = ["website/public/*.json"]
-
-[build.environment]
-NODE_VERSION = "18.20.3"
+  directory      = "website/netlify/functions"
+  included_files = ["website/public/*.json"]
