--- a/website/package.json
+++ b/website/package.json
@@ -10,9 +10,11 @@
     "log": "node ../scripts/progress-log.mjs"
   },
   "dependencies": {
+    "i18next": "^25.6.2",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^16.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
