--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "i18next": "^25.6.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
